# vpn

.github/scripts/: update-version.sh
.github/workflows/: deploy.yaml  release.yaml
backend/: .gitignore  Dockerfile  MIGRATION_INSTRUCTIONS.md  README.md  docker-compose.yaml  infra-docker-compose.yaml  pyproject.toml
backend/.github/workflows/: deploy.yaml
backend/app/: cache.py  config.py  database.py  exceptions.py  main.py
backend/app/admin/: auth.py  view.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 078a9ff99a73_edit_user_add_user_vip_add_sessions.py  137f9e402d5f_add_servers_users_auth.py  1a01c27e39b1_role_in_user.py  24625e1a3dc2_edit_servers.py  54b2c4dc6c1c_fix_server.py  5aaf05419b2f_some_fix.py  9fa5c17ff15d_merge_role_and_is_vip_branches.py  a0f2bc79a478_init_new_base.py  add_device_id_and_is_blocked_to_users.py  bde400b4a76c_add_is_vip_to_users.py  bf7d30110299_edit_servers.py  c93551af9a5b_edit_user_add_user_vip_add_sessions.py  f2a5d9dfe7f2_edit_uservip.py  fd0b7dba831f_edit_servers.py
backend/app/auth/: auth.py  dao.py  dependecies.py  models.py  router.py  schemas.py
backend/app/connect/: __init__.py  router.py  schemas.py
backend/app/dao/: base.py
backend/app/servers/: dao.py  models.py  router.py  utils.py
backend/app/sessions/: dao.py  models.py  router.py  schemas.py
backend/app/users/: dao.py  models.py  router.py  schemas.py
backend/docker/: app.sh
test_app/: FLUTTER_SETUP.md  PHONE_SETUP.md  QUICK_START.md  TROUBLESHOOTING.md  pubspec.yaml
test_app/lib/: home_screen.dart  main.dart  (+1 more)
(+39 files in other folders)
