[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["docker*", "venv*", "*.egg-info*"]

[project]
name = "myvpn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.128.0",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose>=3.5.0",
    "python-json-logger>=4.0.0",
    "redis>=7.1.0",
    "sqladmin>=0.22.0",
    "uuid-utils>=0.12.0",
    "uvicorn>=0.40.0",
]
